🧪 test(ThreadLocalUtils): 添加 ThreadLocalUtils 的单元测试
- ThreadLocalUtilsTest.java：
  - 🧪 添加 testSetAndGet 测试方法，验证 set 和 get 方法的正确性
  - 🧪 添加 testGetWithWrongType 测试方法，验证类型转换错误的处理
  - 🧪 添加 testRemove 测试方法，验证 remove 方法的正确性
  - 🧪 添加 testClear 测试方法，验证 clear 方法的正确性
  - 🧪 添加 tearDown 方法，每次测试后清理线程本地变量

- ThreadLocalKey.java：
  - ✨ 添加 ThreadLocalKey 枚举类，定义线程本地变量的键

- JWTUtilsTest.java：
  - 🧪 修改并添加 JWTUtils 的单元测试，覆盖更多测试场景

- ThreadLocalUtils.java：
  - ✨ 添加 ThreadLocalUtils 工具类，实现线程本地变量的管理

本次提交添加了 ThreadLocalUtils 工具类及其单元测试，确保线程本地变量的管理功能正确。还完善了 JWTUtils 的单元测试，覆盖更多测试场景。